# matrix-bot

./: Cargo.toml  flake.nix
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config.rs  error.rs  main.rs
flake-parts/: shells.nix
