[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.68"
# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full", "sync"] }
thiserror = "1.0.38"
tracing = "0.1.37"

[workspace.dependencies.matrix-sdk]
version = "0.6.2"
features = ["rustls-tls", "e2e-encryption"]
default-features = false

[workspace.dependencies.reqwest]
version = "0.11.12"
features = ["rustls-tls", "json"]
default-features = false

[profile.release]
# opt-level = 2 # fast and small wasm
